<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_gravity="center"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	app:cardElevation="1dp"
	app:cardCornerRadius="7dp"
	app:layout_constraintTop_toTopOf="parent"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintEnd_toEndOf="parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp">

		<TextView
			android:id="@+id/icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:background="@drawable/ic_rate_feedback"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" />

		<TextView
			android:id="@+id/dialog_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/feedback"
			android:textSize="18sp"
			android:textColor="@color/rate_button_color"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/icon"/>

		<EditText
			android:id="@+id/et_feedback"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/rate_background"
			android:gravity="top"
			android:hint="@string/write_your_feedback_here"
			android:lines="4"
			android:padding="5dp"
			android:layout_margin="20dp"
			android:textSize="14sp"
			android:maxLength="50"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/dialog_title"/>

		<Button
			android:id="@+id/bt_send"
			android:layout_width="wrap_content"
			android:layout_height="40dp"
			android:background="@drawable/rate_button_blue"
			android:gravity="center"
			android:text="@string/feedback_send"
			android:textSize="15dp"
			android:textAllCaps="false"
			android:textColor="@android:color/white"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/et_feedback" />


		<LinearLayout
			android:id="@+id/bt_no"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:gravity="center_horizontal"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/bt_send">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:text="@string/rating_dialog_maybe_later"
					android:textSize="14dp" />

			</LinearLayout>

		</LinearLayout>


	</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
