<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="0dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/loginHeader"
        android:text="Register"
        android:textSize="25dp"
        android:layout_marginTop="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        style="@style/parent">

        <EditText
            android:id="@+id/editTextPersonName"
            style="@style/modifiedEditText"
            android:hint=" Full Name"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_cus"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputMobile"
        style="@style/parent"
        android:layout_marginTop="0dp">

        <EditText
            android:id="@+id/editTextPhoneNumber"
            style="@style/modifiedEditText"
            android:hint="@string/login_mobile_number_hint"
            android:drawableLeft="@drawable/ic_phonenumicon_01"
            android:inputType="phone"
            android:maxLength="10"
            android:drawablePadding="10dp"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent"
        android:layout_marginTop="0dp">

        <EditText
            android:id="@+id/editTextEmailAddress"
            style="@style/modifiedEditText"
            android:hint="@string/login_email_hint"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_mailicon_01"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="0dp">

        <EditText
            android:drawableLeft="@drawable/ic_passwordicon_01"
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLines="1" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/ShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Show"
                android:textColor="@color/black"
                android:visibility="invisible" />
            <TextView
                android:textColor="@color/black"
                android:id="@+id/hidePassword"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hide"/>


        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent"
        android:layout_marginTop="0dp">

        <EditText
            android:drawableLeft="@drawable/ic_passwordicon_01"
            android:id="@+id/editTextRePassword"
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLines="1" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:visibility="invisible"
                android:id="@+id/showConfrimPassword"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show"/>
            <TextView
                android:textColor="@color/black"
                android:id="@+id/hideConfrimPassword"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hide"/>


        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registerButton"
        style="@style/loginButton"
        android:text="Register"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/loginViewsMargin" />

    <TextView
        style="@style/parent"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:id="@+id/login"
        android:textColor="@color/primaryTextColor"
        android:text="@string/signup_login_hint"
        android:layout_marginTop="@dimen/loginViewsMargin" />

    <TextView
        style="@style/parent"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:id="@+id/otpscreen"
        android:textColor="@color/primaryTextColor"
        android:text="Already generated OTP for Registeration?"
        android:layout_marginTop="@dimen/loginViewsMargin" />

</LinearLayout>